--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,7 +384,7 @@ h6 {
 
 #hero h1 {
   margin: 0;
-  font-size: 48px;
+  font-size: 55px;
   font-weight: 700;
   color: #fff;
 }
@@ -392,7 +392,7 @@ h6 {
 #hero h2 {
   color: #fff;
   margin: 10px 0 0 0;
-  font-size: 24px;
+  font-size: 30px;
 }
 
 #hero .btn-get-started {
@@ -422,12 +422,14 @@ h6 {
   }
 
   #hero h1 {
-    font-size: 28px;
+    font-size: 45px;
+    font-weight: bolder;
   }
 
   #hero h2 {
-    font-size: 18px;
+    font-size: 25px;
     line-height: 24px;
+    font-weight: bold;
   }
 }
 
@@ -2312,9 +2314,7 @@ section {
     padding: 100px 0;
   }
 
-  #hero h1 {
-    font-size: 28px;
-  }
+
 }
 
 
